--- a/app/views/explore/issue.html.erb
+++ b/app/views/explore/issue.html.erb
@@ -1,6 +1,63 @@
-<%= link_to("Back to edit", admin_explore_issue_path(params[:issue])) if @preview %><br />
-<%= link_to("Current Issue", explore_path) %>
-<br />
-<% @issue.categories.each do |category| %>
-	<%= link_to(category.name, explore_category_path(@issue.issue, category.name)) %>
+<% content_for :headcon do %>
+    <%= stylesheet_link_tag "home/pub/explore", :media => "all" %>
+<% end %>
+
+<% content_for :botcon do %>
+    <%= javascript_include_tag "home/explore", :media => "all" %>
+<% end %>
+
+<div class="splashback explore">
+	<div class="container">
+
+		<div class="tagline">
+			Discover what educators are building today.
+			<br/>
+			Tomorrow's lesson is here!
+		</div>
+
+	</div>
+</div>
+
+<div class="container">
+	<div class="sectr">
+		<legend>Explore Claco #<%= @issue.issue %>
+			<ul class="nav nav-pills">
+              <li class="disabled">Browse by:</li>
+              <% @filters.each do |filter| %>
+	              <li  <%= 'class="active"'.html_safe if @filters.first == filter %>  >
+	              	<a href="#" data-target="<%= filter %>"><%= filter.titlecase %></a>
+	              </li>
+              <% end %>
+            </ul>
+    	</legend>
+
+        <% @filters.each do |filter| %>
+	        <div class="tabcontent <%= 'hidden' if @filters.first != filter %>" data-tabid="<%= filter %>">
+				<% @categories.reject{|c| c.filter != filter}.inject([[]]){|arr,n| arr.last.size == 3 ? arr << [n] : arr.last << n; arr}.each do |row| %>
+					<div class="row-fluid">
+			            <ul class="thumbnails">
+			            	<% row.each do |category| %>
+				              <li class="span4">
+				                <a class="thumbnail" href="detail">
+				                  <img src="http://placekitten.com/g/300/200" alt="">
+				                  <h4 class="caption"><%= category.name %></h4>
+				                </a>
+				              </li>
+				            <% end %>
+			            </ul>
+			        </div>
+		        <% end %>
+	        </div>
+        <% end %>
+
+	</div>
+
+</div>
+<% if false %>
+	<%= link_to("Back to edit", admin_explore_issue_path(params[:issue])) if @preview %><br />
+	<%= link_to("Current Issue", explore_path) %>
+	<br />
+	<% @issue.categories.each do |category| %>
+		<%= link_to(category.name, explore_category_path(@issue.issue, category.name)) %>
+	<% end %>
 <% end %>
