First draft: Gallery
Signed-off-by: Diwank Singh <diwank.singh@gmail.com>

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -492,3 +492,11 @@ footer {
   color: red;
   padding-left: 5px;
 }
+
+
+.truncate {
+  /*width: 250px;*/
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
