--- a/app/views/explore/issue.html.erb
+++ b/app/views/explore/issue.html.erb
@@ -3,7 +3,33 @@
 <% end %>
 
 <% content_for :botcon do %>
-    <%= javascript_include_tag "home/explore", :media => "all" %>
+	<script type="text/javascript">
+		// $(function() {
+		//     var scroll_text;
+		//     $('div.container').hover(
+
+		//     function() {
+		//         var $elmt = $(this);
+		//         scroll_text = setInterval(function() {
+		//             scrollText($elmt);
+		//         }, 12);
+		//     }, function() {
+		//         clearInterval(scroll_text);
+		//         $(this).find('div.title-holder a').css({
+		//             left: 0
+		//         });
+		//     });
+
+		//     var scrollText = function($elmt) {
+		//         var left = $elmt.find('div.title-holder a').position().left - 1;
+		//         left = -left > $elmt.find('div.title-holder a').width() ? $elmt.find('div.title-holder').width() : left;
+		//         $elmt.find('div.title-holder a').css({
+		//             left: left
+		//         });
+		//     };
+
+		// });
+	</script>
 <% end %>
 
 <div class="splashback explore">
@@ -19,41 +45,35 @@
 </div>
 
 <div class="container">
-	<div class="sectr">
-		<legend>Explore Claco #<%= @issue.issue %>
-			<ul class="nav nav-pills">
-              <li class="disabled">Browse by:</li>
-              <% @filters.each do |filter| %>
-	              <li  <%= 'class="active"'.html_safe if @filters.first == filter %>  >
-	              	<a href="#" data-target="<%= filter %>"><%= filter.titlecase %></a>
-	              </li>
-              <% end %>
-            </ul>
-    	</legend>
+    <% @categories.each do |category| %>
+		<div class="sectr">
+			<legend><%= category.name %></legend>
+			<% category.find_binders.inject([[]]){|arr,n| arr.last.size == 4 ? arr << [n] : arr.last << n; arr}.each do |row| %>
+				<div class="row-fluid">
+		            <ul class="thumbnails">
+		            	<% row.each do |binder| %>
+			              <li class="span3">
+			                <a class="thumbnail" href="<%= named_binder_route(binder) %>">
+			                  <img src="<%= binder.current_version.img_thumb_lg.url %>" alt="<%= binder.title %>">
+			                  <h4 class="caption truncate"><%= binder.title %></h4>
+			                </a>
+			              </li>
+			            <% end %>
+		            </ul>
+		        </div>
+			<% end %>
 
-        <% @filters.each do |filter| %>
-	        <div class="tabcontent <%= 'hidden' if @filters.first != filter %>" data-tabid="<%= filter %>">
-				<% @categories.reject{|c| c.filter != filter}.inject([[]]){|arr,n| arr.last.size == 3 ? arr << [n] : arr.last << n; arr}.each do |row| %>
-					<div class="row-fluid">
-			            <ul class="thumbnails">
-			            	<% row.each do |category| %>
-				              <li class="span4">
-				                <a class="thumbnail" href="detail">
-				                  <img src="http://placekitten.com/g/300/200" alt="">
-				                  <h4 class="caption"><%= category.name %></h4>
-				                </a>
-				              </li>
-				            <% end %>
-			            </ul>
-			        </div>
-		        <% end %>
-	        </div>
-        <% end %>
-
-	</div>
+		</div>
+	<% end %>
 
 </div>
 <% if false %>
+			<% @categories.reject{|c| c.filter != filter}.inject([[]]){|arr,n| arr.last.size == 3 ? arr << [n] : arr.last << n; arr}.each do |row| %>
+	        <% end %>
+
+				<%= binder.user %>
+				<%= strip_tags(binder.body) %>
+				<%= link_to(image_tag(teacher_thumb_sm(binder.find_owner)), "/#{binder.username}") %>
 	<%= link_to("Back to edit", admin_explore_issue_path(params[:issue])) if @preview %><br />
 	<%= link_to("Current Issue", explore_path) %>
 	<br />
