--- a/app/views/shared/404.html
+++ b/app/views/shared/404.html
@@ -5,9 +5,10 @@
 <div id="error-main">
   <div id="error-header">
     <h1><i class="ui-icon-warning-sign icon-white"></i>404</h1>
-    <h2>The page you were looking for could not be found :(</h2>
   </div>
   <div id="error-content">
+    <h2>Oh No! The page you were looking for could not be found :(</h2>
+    <hr/>
     <p>You may have mistyped the address or the page may not exist anymore.</p>
     <p>Do you think the page should be here and we got something wrong? Report please!</p>
     <div class="error-util">
