--- a/app/assets/stylesheets/home/public.css.erb
+++ b/app/assets/stylesheets/home/public.css.erb
@@ -99,7 +99,7 @@
   width: 65%;
 }
 
-#nominate-form {
+#nominate-popup {
   display: inline;
 }
 
@@ -110,7 +110,7 @@ input.invite-email {
   margin-left: auto;
 }
 
-#nominate-form input[type=email]:last-of-type {
+#nominate-popup input[type=email]:last-of-type {
   opacity: 0.4;
 }
 
