--- a/app/assets/stylesheets/home/pub/explore.css.erb
+++ b/app/assets/stylesheets/home/pub/explore.css.erb
@@ -54,13 +54,18 @@ legend ul.nav {
   min-width: 150px;
 
   text-align: right;
-  background-color: #08c;
   color: #eee;
 
-  -webkit-transition: background 0.2s ease-out;
-     -moz-transition: background 0.2s ease-out;
-       -o-transition: background 0.2s ease-out;
-          transition: background 0.2s ease-out;
+  -webkit-transition: margin-left 2.8s cubic-bezier(1,.16,1,1);
+     -moz-transition: margin-left 2.8s cubic-bezier(1,.16,1,1);
+       -o-transition: margin-left 2.8s cubic-bezier(1,.16,1,1);
+          transition: margin-left 2.8s cubic-bezier(1,.16,1,1);
+}
+
+.sectr .caption-box {
+  background-color: #08c;
+  width: auto;
+  height: auto;
 }
 
 a.thumbnail {
@@ -71,13 +76,24 @@ a.thumbnail {
 a.thumbnail:hover {
   text-decoration: none;
 }
-
+/*
 a.thumbnail:hover h4::after {
   content: " →";
+}*/
+
+a.thumbnail:hover .caption-box {
+  background-color: #222;
 }
 
-a.thumbnail:hover h4 {
-  background-color: #222;
+img.binder-user {
+  display: inline;
+  margin: -32px 0 0 12px;
+  width: 30px;
+  
+  border: 2px solid white;
+  border-radius: 2px;
+
+  background-color: white;
 }
 
 hr {
