--- a/app/assets/stylesheets/home/pub/explore_detail.css.erb
+++ b/app/assets/stylesheets/home/pub/explore_detail.css.erb
@@ -20,7 +20,7 @@
   height:16px;
 }
 
-.description: {
+.description {
   display: inline;
   float: right;
 }
@@ -35,7 +35,7 @@ legend small {
   float: right;
 }
 
-.profile: {
+.profile {
   margin-top: 10px;
   width: 150px;
 }
