--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -9,4 +9,5 @@
 <a href="/admin/fpfeatured">Pick Front Page Binders</a><br />
 <a href="/admin/featured">Pick Featured Binders</a><br />
 <a href="/admin/pioneer">Pick Pioneerchat Binder</a><br />
+<a href="/admin/explore">Manage Explore Page</a><br />
 <a href="/admin/updatethumbnails">Manually override folder thumbnails</a>
