--- a/app/views/explore/editcat.html.erb
+++ b/app/views/explore/editcat.html.erb
@@ -22,11 +22,11 @@ No binders have been added yet
 <% end %>
 <br />
 <br />
-<%= link_to("Preview this category", preview_category_path(params[:issue], @category.name)) %>
+<%= link_to("Preview this issue", preview_issue_path(params[:issue])) %>
 <%= link_to("Back to issue", admin_explore_issue_path(params[:issue])) %>
 <%= form_for @category, :url => admin_explore_categories_path(params[:issue], @category.name), :method => :post do |f| %>
-<%= f.label :filter, "Filter by" %>
-<%= f.text_field :filter %>
+<%# f.label :filter, "Filter by" %>
+<%# f.text_field :filter %>
 <%= f.label :subtitle, "Subtitle" %>
 <%= f.text_field :subtitle %>
 <%= f.label :binders, "Add Binder ID" %>
