added new splash for explore
Signed-off-by: Albert Pai <iamalbertpai@gmail.com>

--- a/app/assets/stylesheets/home/pub/explore.css.erb
+++ b/app/assets/stylesheets/home/pub/explore.css.erb
@@ -9,7 +9,7 @@
 }
 
 .explore {
-  background-image: url('<%= asset_path "public/explore/splash.jpg" %>');
+  background-image: url('<%= asset_path "public/explore/teach.jpg" %>');
 }
 
 .splashback .tagline {
