--- a/app/assets/stylesheets/home/pub/explore.css.erb
+++ b/app/assets/stylesheets/home/pub/explore.css.erb
@@ -38,9 +38,11 @@
   margin-top:-80px;
 }
 
-legend ul.nav {
+legend ul.nav,
+legend small {
   float:right;
-  font-size:.6em;
+  font-size:.7em;
+  margin-right: .5em;
 }
 
 .nav li.disabled {
