Fix for floating binder thumbs
Signed-off-by: Diwank Singh <diwank.singh@gmail.com>

--- a/app/assets/stylesheets/home/pub/explore.css.erb
+++ b/app/assets/stylesheets/home/pub/explore.css.erb
@@ -87,15 +87,19 @@ a.thumbnail:hover .caption-box {
   background-color: #222;
 }
 
-img.binder-user {
-  display: inline;
-  margin: -32px 0 0 12px;
+.binder-user {
+  display: block;
+  margin: -35px 0 0 12px;
   width: 30px;
   
   border: 2px solid white;
   border-radius: 2px;
 
   background-color: white;
+}
+
+img.binder-thumb {
+  width: 100%;
 }
 
 hr {
