--- a/app/views/explore/issue.html.erb
+++ b/app/views/explore/issue.html.erb
@@ -43,8 +43,10 @@
 		            	<% row.each do |binder| %>
 			              <li class="span3">
 			                <a class="thumbnail" href="<%= named_binder_route(binder) %>">
-			                  <img src="<%= binder.current_version.img_thumb_lg.url %>" alt="<%= binder.title %>">
-		                  	  <img class="binder-user" src="<%= teacher_thumb_sm(binder.find_owner) %>" alt="<%= binder.user %>" >
+			                  <img class="binder-thumb" src="<%= binder.current_version.img_thumb_lg.url %>" alt="<%= binder.title %>">
+		                  	  <span class="binder-user">
+		                  	  	<img src="<%= teacher_thumb_sm(binder.find_owner) %>" alt="<%= binder.user %>" >
+		                  	  </span>
 			                  <!-- <a href="/<%= binder.username %>">
 		                  	  	<img class="binder-user" src="<%= teacher_thumb_sm(binder.find_owner) %>" alt="<%= binder.user %>" >
 		                  	  </a> -->
