--- a/app/views/shared/403.html
+++ b/app/views/shared/403.html
@@ -4,7 +4,7 @@
 
 <div id="error-main">
   <div id="error-header">
-    <h1><i class="ui-icon-warning-sign icon-white"></i>403</h1>
+    <h1>403</h1>
   </div>
   <div id="error-content">
     <h2>Sorry we can't show you this page!</h2>
@@ -12,9 +12,9 @@
     <p>You probably don't have permission to see this</p>
     <p>Do you have access to this page and we got something wrong? Report please!</p>
     <div class="error-util">
-      <div class="button-container right">
+      <div class="button-container">
         <a href="/" id="apply-btn" class="btn">Home</a>
-        <a href="#" class="btn" onclick="olark('api.box.expand'); return false">Contact Us</a>
+        <a href="#" class="btn" onclick="olark('api.box.expand'); return false">Contact a Human</a>
       </div>
       <div style="clear: both"></div>
     </div>
