--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -11,3 +11,4 @@
 <a href="/admin/pioneer">Pick Pioneerchat Binder</a><br />
 <a href="/admin/explore">Manage Explore Page</a><br />
 <a href="/admin/updatethumbnails">Manually override folder thumbnails</a>
+<a href="/admin/analytics">Analytics></a>
