--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -10,5 +10,5 @@
 <a href="/admin/featured">Pick Featured Binders</a><br />
 <a href="/admin/pioneer">Pick Pioneerchat Binder</a><br />
 <a href="/admin/explore">Manage Explore Page</a><br />
-<a href="/admin/updatethumbnails">Manually override folder thumbnails</a>
-<a href="/admin/analytics">Analytics></a>
+<a href="/admin/updatethumbnails">Manually override folder thumbnails</a><br />
+<a href="/admin/analytics">Analytics</a>
