added titles to error pages
Signed-off-by: Albert Pai <iamalbertpai@gmail.com>

--- a/app/views/errors/not_found.html.erb
+++ b/app/views/errors/not_found.html.erb
@@ -1,3 +1,5 @@
+<% @title = "The page you were looking for doesn't exist. (404)" %>
+
 <% content_for :headcon do %>
   <%= stylesheet_link_tag  "errors", :media => "all" %>
 <% end %>
