--- a/app/views/errors/forbidden.html.erb
+++ b/app/views/errors/forbidden.html.erb
@@ -1,3 +1,5 @@
+<% @title = "You are forbidden from accessing this page. (403)" %>
+
 <% content_for :headcon do %>
   <%= stylesheet_link_tag  "errors", :media => "all" %>
 <% end %>
