--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -4,6 +4,7 @@
 <a href="/admin/invite">Invite User</a><br />
 <a href="/admin/sysinvlist">System Invite List</a><br />
 <a href="/admin/apps">Applicants</a><br />
+<a href="/admin/noms">Nominees</a><br />
 <a href="/admin/users">Users</a><br />
 <a href="/admin/invites">Invites</a><br />
 <a href="/admin/fpfeatured">Pick Front Page Binders</a><br />
