--- a/app/views/home/_public.html.erb
+++ b/app/views/home/_public.html.erb
@@ -143,7 +143,7 @@
 
 	<p class="alert-error hidden"></p>
 
-  <form action="/invite" class="bodcon" id="nominate-form">
+  <form action="/nominate" class="bodcon" id="nominate-form">
     <h3 style="font-size:11px;"> Leave your name so (s)he can thank you:</h3>
 
     <input maxlength="50" name="inviter" class="firstfocus invite-email" type="text" placeholder="Your full name" />
