--- a/app/views/home/press.html.erb
+++ b/app/views/home/press.html.erb
@@ -62,8 +62,8 @@
       <div style="clear:both"></div>
     </div>
 
-    <h1 style="text-align:center;margin-top:30px">
-      <%= link_to('Download Press Kit', "http://static.claco.com/press_kit.zip")) %>
-    </h1>
     <h1 style="text-align:center;margin-top:30px"><a href="http://www.claco.com/eric/portfolio/Claco-Press/Press/505769ff2d435d000200028c">View more press here &rarr;</a></h1>
+    <h2 style="text-align:center;margin-top:0px">
+      <%= link_to('Download Press Kit', "press_kit.zip") %>
+    </h2>
 </div>
