--- a/app/views/home/_public.html.erb
+++ b/app/views/home/_public.html.erb
@@ -146,10 +146,10 @@
   <form action="/nominate" class="bodcon" id="nominate-form">
     <h3 style="font-size:11px;"> Leave your name so (s)he can thank you:</h3>
 
-    <input maxlength="50" name="inviter" class="firstfocus invite-email" type="text" placeholder="Your full name" />
+    <input maxlength="50" name="inviter" class="firstfocus invite-email" type="text" placeholder="Your full name" required/>
 
 		<h3 style="font-size:11px;"> Invite Teachers to our exclusive beta!</h3> 
-    <input maxlength="50" name="emails[]" class="invite-email" type="email" placeholder="Enter an awesome teacher's email!" value=""/>
+    <input maxlength="50" name="emails[]" class="invite-email" type="email" placeholder="Enter an awesome teacher's email!" value="" required/>
     <input maxlength="50" name="emails[]" class="invite-email" type="email" placeholder="Enter an awesome teacher's email!" value=""/>
 
     <div class="buttonbar">
