--- a/app/views/home/_public.html.erb
+++ b/app/views/home/_public.html.erb
@@ -50,7 +50,7 @@
 
 							<div class="contentitem">
 								<div class="preview">
-									<%= link_to(image_tag(get_binder_image(binder)), named_binder_route(binder)) %>
+									<%= link_to(image_tag(explore_binder_thumb_lg(binder)), named_binder_route(binder)) %>
 								</div>
 
 
