--- a/app/views/home/press.html.erb
+++ b/app/views/home/press.html.erb
@@ -63,7 +63,7 @@
     </div>
 
     <div class="buttoners pagination-centered">
-      <%= link_to('Download Press Kit', "press_kit.zip", :class => "btn") %>
+      <%= link_to('Download Press Kit', "http://static.claco.com/press_kit.zip", :class => "btn") %>
       <a class="btn btn-success" href="http://www.claco.com/eric/portfolio/Claco-Press/Press/505769ff2d435d000200028c">
         View more press here &rarr;
       </a>
