Nominees fixes / final
Signed-off-by: Albert Pai <iamalbertpai@gmail.com>

--- a/app/views/home/_public.html.erb
+++ b/app/views/home/_public.html.erb
@@ -139,9 +139,9 @@
 
   <div class="errorBox"></div>
 
-	<p class="alert-success hidden"></p>
+	<p class="alert alert-success hidden"></p>
 
-	<p class="alert-error hidden"></p>
+	<p class="alert alert-error hidden"></p>
 
   <form action="/nominate" class="bodcon" id="nominate-form">
     <h3 style="font-size:11px;"> Leave your name so (s)he can thank you:</h3>
