--- a/app/views/admin/nominees.html.erb
+++ b/app/views/admin/nominees.html.erb
@@ -24,8 +24,8 @@
 <td><%= nom.email %></td>
 <td><%= time_ago_in_words(Time.at(nom.timestamp).to_datetime) %> ago</td>
 <td><% if nom.status == 0 %>
-		<%= link_to("Approve", nom_approve_path(nom)) %> |
-		<%= link_to("Deny", nom_deny_path(nom)) %>
+		Approve<%# link_to("Approve", nom_approve_path(nom)) %> |
+		Deny<%# link_to("Deny", nom_deny_path(nom)) %>
 	<% else %>
 		<%= nom.status == 1 ? "Approved" : "Denied" %>
 	<% end %></td>
