Update +1 code and added canonical url
Signed-off-by: Diwank Singh <diwank.singh@gmail.com>

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,6 +5,7 @@
 <% else %>
 	<% content_for :headcon do %>
 		<%= stylesheet_link_tag "home/public", :media => "all" %>
+		<link rel="canonical" href="http://www.claco.com" />
 	<% end %>
 
 	<% cache('publichome') do %>
