--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -493,6 +493,7 @@ footer {
   padding-left: 5px;
 }
 
+/* helpers */
 
 .truncate {
   /*width: 250px;*/
@@ -503,4 +504,11 @@ footer {
 
 .centered {
   margin: 0 auto;
+}
+
+.hidden {
+  height: 0;
+  width: 0;
+  display: none;
+  visibility: hidden;
 }
