working teacher analytics page

--- a/app/views/admin/teacheranalytics.html.erb
+++ b/app/views/admin/teacheranalytics.html.erb
@@ -1,4 +1,4 @@
-<h2>Teacher Analytics</h2>
+<h2>Teacher Analytics (unfinished)</h2>
 <hr />
 <%= form_tag 'teacheranalytics', :method => 'get' do %>
 	<table>
@@ -112,15 +112,38 @@
 		</tr>
 		<tr>
 			<td>
+				Entries per page:&nbsp;
+			</td>
+			<td>
+				<%= select_tag(:entries, options_for_select([['25','25'],['50','50'],['100','100'],['250','250'],['500','500']],(params[:entries] || '100'))) %>
+			</td>
+		</tr>
+		<tr>
+			<td>
 				<%= submit_tag "Apply Filters", :name => nil %>
 			</td>
 		</tr>
 	</table>
 <% end %>
+<%= @teachers.size 
+%>
 
-<% if false %>
-	Have profile pictures
+<% begin %>
+	<%= paginate(@logs) %>
+	<%= page_entries_info(@logs).html_safe %>
+<% rescue %>
+<% end %>
 
-	Two groups, compare sets of these groups of IDs
-	Make group model
+<table>
+	<tr>
+		<td>
+
+		</td>
+	</tr>
+</table>
+
+<% begin %>
+	<%= paginate(@logs) %>
+	<%= page_entries_info(@logs).html_safe %>
+<% rescue %>
 <% end %>
