--- a/app/assets/stylesheets/home/pub/explore.css.erb
+++ b/app/assets/stylesheets/home/pub/explore.css.erb
@@ -51,11 +51,11 @@ legend small {
 }
 
 .sectr .caption {
-  padding: 8px 24px;
+  padding: 8px 16px;
   margin-top: 4px;
   min-width: 150px;
 
-  text-align: right;
+  /*text-align: right;*/
   color: #eee;
 
   -webkit-transition: margin-left 2.8s cubic-bezier(1,.16,1,1);
@@ -70,12 +70,13 @@ legend small {
   height: auto;
 }
 
-a.thumbnail {
+.thumbnail {
   cursor: pointer;
   overflow: hidden;
+  margin-bottom: 0.5em;
 }
 
-a.thumbnail:hover {
+.thumbnail:hover {
   text-decoration: none;
 }
 /*
@@ -83,19 +84,25 @@ a.thumbnail:hover h4::after {
   content: " →";
 }*/
 
-a.thumbnail:hover .caption-box {
+.thumbnail:hover .caption-box {
   background-color: #222;
 }
 
 .binder-user {
-  display: block;
-  margin: -35px 0 0 12px;
-  width: 30px;
-  
-  border: 2px solid white;
-  border-radius: 2px;
+  margin-left: 1.2em;
+}
 
-  background-color: white;
+.binder-user img {
+  display: inline;
+  width: 24px;
+  
+  border-radius: 2px;
+}
+
+.binder-user a {
+  vertical-align: bottom;
+  text-transform: capitalize;
+  padding: 2px 4px;
 }
 
 img.binder-thumb {
